# execute-rust-docker

./: Cargo.toml  Dockerfile  README.md
data/: sample.json  sample.xml
src/: main.rs
