[package]
name = "test-app"
version = "0.1.0"
edition = "2024"

[dependencies]
bpaf = { version = "0.9.20", features = ["derive"] }
roxmltree_to_serde = "0.6.2"
serde = "1.0.219"
serde_json = "1.0.140"

[profile.release]
opt-level = "z"
debug = false
lto = true
strip = true
codegen-units = 1
panic = "abort"
